--- a/.gitignore
+++ b/.gitignore
@@ -1,129 +1,104 @@
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
-*$py.class
+# installing libraries
+pip install nltk
 
-# C extensions
-*.so
 
-# Distribution / packaging
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-pip-wheel-metadata/
-share/python-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
+pip install newspaper3k
 
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
 
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
+# importing packages
+from newspaper import Article
+import random
+import string
+import nltk
+from sklearn.feature_extraction.text import CountVectorizer
+from sklearn.metrics.pairwise import cosine_similarity
+import numpy as np
+import warnings
+warnings.filterwarnings('ignore')
 
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py,cover
-.hypothesis/
-.pytest_cache/
 
-# Translations
-*.mo
-*.pot
+# adding natural language processing
+nltk.download('punkt',quiet=True)
 
-# Django stuff:
-*.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
 
-# Flask stuff:
-instance/
-.webassets-cache
+# importing data
+article = Article('https://en.wikipedia.org/wiki/Python_(programming_language)')
+article.download()
+article.parse()
+article.nlp()
+corpus = article.text
 
-# Scrapy stuff:
-.scrapy
 
-# Sphinx documentation
-docs/_build/
+# tokenizing
+text = corpus
+sentence_list = nltk.sent_tokenize(text)
+print(sentence_list)
 
-# PyBuilder
-target/
 
-# Jupyter Notebook
-.ipynb_checkpoints
+# defining greetings
+def greeting_response(text):
+  text = text.lower()
 
-# IPython
-profile_default/
-ipython_config.py
+  bot_greetings = ['hey','hello','hi','hola']
+  user_greetings = ['hi','hola','hey','hello','wassup']
 
-# pyenv
-.python-version
+  for word in text.split():
+    if word in user_greetings:
+      return random.choice(bot_greetings)
+      
+      
+def index_sort(list_var):
+  length = len(list_var)
+  list_index = list(range(0,length))
 
-# pipenv
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
-#   install all needed dependencies.
-#Pipfile.lock
+  x=list_var
+  for i in range (length):
+    for j in range(length):
+      if x[list_index[i]] > x[list_index[j]]:
+        temp = list_index[i]
+        list_index[i] = list_index[j]
+        list_index[j] = temp
+    return list_index
+    
+    
+# defining bot response size
+def bot_response(user_input):
+  user_input = user_input.lower()
+  sentence_list.append(user_input)
+  bot_response=''
+  cm = CountVectorizer().fit_transform(sentence_list)
+  similarity_scores = cosine_similarity(cm[-1],cm)
+  similarity_scores_list= similarity_scores.flatten()
+  index = index_sort(similarity_scores_list)
+  index = index[1:]
+  response_flag = 0
 
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow
-__pypackages__/
+  j = 0
+  for i in range(len(index)):
+    if similarity_scores_list[index[i]] > 0.0:
+      bot_response = bot_response+''+sentence_list[index[i]]
+      response_flag = 1
+      j = j+1
+    if j>2:
+      break
 
-# Celery stuff
-celerybeat-schedule
-celerybeat.pid
+  if response_flag == 0:
+    bot_response = bot_response+''+"I apologize, I don't understand."
 
-# SageMath parsed files
-*.sage.py
-
-# Environments
-.env
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
-
-# Spyder project settings
-.spyderproject
-.spyproject
-
-# Rope project settings
-.ropeproject
-
-# mkdocs documentation
-/site
-
-# mypy
-.mypy_cache/
-.dmypy.json
-dmypy.json
-
-# Pyre type checker
-.pyre/
+  sentence_list.remove(user_input)
+  return bot_response
+  
+  
+  #terminating bot
+  print('Edu Bot : i am a Edu Bot i can help you to know about python.If you want to exit, type bye.')
+exit_list = ['exit','bye','quit']
+while(True):
+  user_input = input()
+  if user_input.lower() in exit_list:
+    print('Edu Bot : chat with you later')
+    break
+  else:
+    if greeting_response(user_input) != None:
+      print('Edu Bot : '+greeting_response(user_input))
+    else:
+      print('Edu Bot : '+bot_response(user_input))
